fixed alignments + boxes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -20,6 +20,7 @@ html {
 body {
   margin: 0;
   margin-top: 70px;
+  margin-bottom: 500px;
 }
 article,
 aside,
@@ -2517,6 +2518,7 @@ label {
   max-width: 100%;
   margin-bottom: 5px;
   font-weight: bold;
+  text-align: right;
 }
 input[type="search"] {
   -webkit-box-sizing: border-box;
